feat: :sparkles: Bootstrap

--- a/angular.json
+++ b/angular.json
@@ -25,9 +25,14 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
-            ],
-            "scripts": []
+              ],
+              "scripts": [
+                "node_modules/jquery/dist/jquery.js",
+                "node_modules/@popperjs/core/dist/umd/popper.js",
+                "node_modules/bootstrap/dist/js/bootstrap.js"
+                ]
           },
           "configurations": {
             "production": {
@@ -94,5 +99,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "c70514f7-5806-44be-9afa-8453c488dc86"
   }
 }
